fixed double borders at ship list

--- a/src/components/list/list.css
+++ b/src/components/list/list.css
@@ -24,16 +24,11 @@
     width: 100%;
     margin: auto;
     padding: 0 10px;
-    border-bottom: 1px solid white;
     border-top: 1px solid white;
 
 }
-.ship-list .ship:nth-last-child(1){
-  /* border-bottom: 1px solid white; */
-}
-.ship-list .ship:nth-last-child(1){
-  border-top: none;
-  /* border-bottom: none; */
+.ship-list .ship:last-child{
+  border-bottom: 1px solid white;
 }
 .shipname{
   color: white;
